todolistAltenar/k8s/ingress_manifests/ingress-todolist.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-application

spec:
  rules:
  - host: altenar-intership-2025.com
    http:
      paths:
        - path:
          pathType: Prefix
          backend:
            service:
              name: main-frontend
              port:
                number: 80
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: main-backend
              port:
                number: 5140
